[metadata]
name = tarjinja
version = attr: tarjinja._cli.VERSION
url = https://github.com/wtnb75/tarjinja
author = Takashi WATANABE
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = archive/recursive copy with template
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  tarjinja=tarjinja._cli:cli

[options.package_data]
tarjinja =
  data/*.zip
  data/*.gz
  data/*.yaml
