[metadata]
name = {{name}}
version = attr: {{name}}._cli.VERSION
url = {{baseurl}}/{{name}}
author = {{author}}
author_email = {{author_email}}
license = MIT
license_file = LICENSE
description = {{description|default("")}}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  {{name}}={{name}}._cli:cli
